<resources>
    <string name="app_name">Assignment 1 - Calculator</string>
    <string name="equation"></string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonBack">Back</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonClear">C</string>
    <string name="buttonDivide">/</string>
    <string name="buttonEquals">=</string>
    <string name="buttonMultiply">*</string>
    <string name="advanced">Advanced</string>
    <string name="standard">Standard</string>
    <string name="pow">POW</string>
    <string name="remainder">%</string>
    <string name="max">MAX</string>
    <string name="min">MIN</string>

</resources>