<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FFE4E1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFACD"
        >
        <TextView
            android:id="@+id/equate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equation"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="130dp"
            android:paddingEnd="130dp">
            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/buttonBack"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button1"
                android:textSize="25sp" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button2"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button3"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonPlus"
                android:textSize="25sp"
               />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button4"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button5"
                android:textSize="25sp"
               />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button6"
                android:textSize="25sp"
               />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonMinus"
                android:textSize="25sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button7"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button8"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button9"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonMultiply"
                android:textSize="25sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonClear"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button0"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonEquals"
                android:textSize="25sp"
                />

            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonDivide"
                android:textSize="25sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/POW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pow"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/Remainder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remainder"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/maximum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/minimum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:textSize="20sp"
                />
        </LinearLayout>
        <Button
            android:id="@+id/buttonAdvanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced"
            android:textSize="25sp"
            />
    </LinearLayout>


</LinearLayout>